# the-missing-dependencies

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
.github/workflows/: test.yaml
backend/: download.py  files.py  run.py  test_file.py
backend/src/: run.py  testing.py
backend/src/encryption/: consts.py  image_aes.py
backend/src/language_processing/: __init__.py  piet_runner.py  python_runner.py
backend/tests/: test_runner.py
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts.timestamp-1694333930288-dfa605906ab58.mjs
frontend/src/: App.css  App.jsx  App.tsx  index.css
frontend/src/components/: Editor.css  Editor.jsx  Editor.tsx  FileManagerContextProvider.jsx  Navbar.css  Navbar.jsx  Navbar.tsx  Output.css  Output.jsx  Output.tsx
frontend/src/utils/: mapping.js  mapping.ts
src/language_processing/: runner.py
